--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
 	background: var(--bg-main);
 	position: relative;
 	overflow: auto;
+	overflow-y: scroll;
 }
 
 button {
